# peq

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  peq-foster.jucer
Source/: PluginEditor.cpp  PluginProcessor.cpp  biquad.h  utilities.h
Source/components/: Band.h  LAFs.h  TitleBlock.h
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  biquad.h  utilities.h
src/components/: Band.h  Knob.h  LAFs.h  TitleBlock.h
